<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/home_icon_foreground"
        android:title="@string/text_label_1"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/search_icon_foreground"
        android:title="@string/text_label_2"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/add_icon_foreground"
        android:title="@string/text_label_3"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/chat_icon_foreground"
        android:title="@string/text_label_4"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/profile_icon_foreground"
        android:title="@string/text_label_5"/>
</menu>