<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetContainer"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/register_card"
        android:textSize="26sp"
        android:textColor="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginEnd="10sp"
            android:backgroundTint="@color/white"
            android:shadowColor="@color/white"
            android:inputType="text"/>

        <EditText
            android:id="@+id/email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="10sp"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:drawableStart="@drawable/iclock"
            android:drawableLeft="@drawable/iclock"
            android:drawablePadding="10sp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/password_reg_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:drawableStart="@drawable/iclock"
            android:drawableLeft="@drawable/iclock"
            android:drawablePadding="10sp"
            android:hint="@string/repeat_password"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUp"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="350sp"
            android:gravity="center"
            android:textSize="16sp"
            android:foregroundGravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:backgroundTint="@color/white"
            android:textColor="@color/main_color"/>

    </LinearLayout>

</LinearLayout>